# CQU_mobile_robot_course

./: .gitignore  README.md
project1_basic_move/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
project1_basic_move/ros2_ws/log/: latest_build
project1_basic_move/ros2_ws/src/vel_pkg/src/: vel_node.cpp
project2_lidar_mapping/prj2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
project2_lidar_mapping/prj2_ws/log/: latest_build
project2_visual_recognition/prj2_ws/: .gitignore
project3_path_planning/prj3_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
project3_path_planning/prj3_ws/log/: latest_build
project3_path_planning/prj3_ws/src/lidar_pkg/src/: lidar_behavior.cpp  lidar_data.cpp
project3_path_planning/prj3_ws/src/slam_pkg/launch/: slam.launch.py
project3_slam_mapping/prj3_ws/: .gitignore  map.yaml
project3_slam_mapping/prj3_ws/src/slam_pkg/launch/: slam.launch.py
project4_navgation/prj4_ws/: .gitignore
project4_navgation/prj4_ws/src/nav_pkg/: CMakeLists.txt  package.xml
project4_navgation/prj4_ws/src/nav_pkg/launch/: nav.launch.py  waypoint_nav.launch.py
project4_navgation/prj4_ws/src/nav_pkg/src/: waypoint_navigation.cpp
ros2_ws/install/: setup.sh
ros2_ws/install/vel_pkg/share/vel_pkg/: local_setup.dsv  package.bash  package.ps1  package.sh
ros2_ws/install/wpr_simulation2/lib/wpr_simulation2/: 10_pc_data  10_pc_objects  11_grab_object  11_mani_ctrl  12_fetch  3_subscriber_node  5_lidar_behavior  5_lidar_data  6_imu_behavior  6_imu_data  8_waypoint_navigation  ball_random_move  demo_nav2_client
ros2_ws/log/: latest_build
ros2_ws/src/vel_pkg/: CMakeLists.txt
(+88 files in other folders)
